filing/css/styles.css
/* ... */
/*
 * Re-set default cursor for disabled elements
 */

button[disabled],
input[disabled] {
	cursor: default;
}

/*
 * Consistent box sizing and appearance
 */

input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box;
	padding: 0;
	*width: 13px;
	*height: 13px;
}
input[type="search"] {
	-webkit-appearance: textfield;
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
}
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button {
	-webkit-appearance: none;
}

/*
 * Remove inner padding and border in FF3/4
 */

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

/*
 * 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing
 */

textarea {
	overflow: auto;
	vertical-align: top;
	resize: vertical;
}

/* Colors for form validity */
input:valid,
textarea:valid {
}
input:invalid,
textarea:invalid {
	background-color: #f0dddd;
}

/* =============================================================================
   Tables
   ========================================================================== */

table {
	border-collapse: collapse;
	display: block;
	padding-top: 120px;
	padding-bottom: 80px;
}
tr {
	padding: 0;
	margin: 0;
}
td {
	vertical-align: top;
	padding-right: 60px;
	line-height: 1.4;
}

/* =============================================================================
   Chrome Frame Prompt
   ========================================================================== */

.chromeframe {
	margin: 0.2em 0;
	background: #ccc;
	color: black;
	padding: 0.2em 0;
}

/* ==|== primary styles =====================================================
   Author: Dan Newman
   ========================================================================== */

/* CUSTOM STYLES */

/* Fixed scrolling panel (WIP)

.home .fixed {
	position: fixed;
	background-image: url("file:///Users/danserif/Documents/GitHub/dan.newman.is/filing/images/wellington-location.png"), url("file:///Users/danserif/Documents/GitHub/dan.newman.is/filing/images/wellington-map-large.jpg");
	background-repeat: no-repeat;
	background-position: left top;
	background-size: contain;
	margin: auto;
	width: 100%;
	padding: 30px 60px 40px 60px;
}
.work .fixed {
	position: relative;
	max-width: 100%;
	margin: auto;
	width: 100%;
	padding: 30px 60px 0px 60px;
}
.home .container,
.work .container {
	position: absolute;
	margin: auto;
	padding: 0;
	width: 100%;
}

.work .container {
	padding: 0px 60px 40px 60px;
}

.home main {
	background-color: #060606;
	margin-top: 100vh;
	display: block;
	padding: 30px 60px 40px 60px;
}
.home footer {
	background-color: #060606;
}

*/

.home .container {
	background-image: url("/filing/images/wellington-location.png"), url("/filing/images/wellington-map-large.jpg");
	background-repeat: no-repeat;
	background-position: right top;
	background-size: contain;
	max-width: 100%;
}

.container {
	padding: 30px 60px 40px 60px;
}

.container p {
	margin: 0 0 20px 0;
}

p {
	color: #dddddd;
}

nav a {
	font-size: 16px;
	text-decoration: none;
}

nav a:hover {
	opacity: 0.4;
	text-decoration: none;
}

.URL {
	text-transform: uppercase;
	margin-right: 15%;
}

.anchor {
	float: right;
	margin-right: 15%;
}

header {
	max-width: 1220px;
	padding-top: 60vh;
}

.home header {
	padding-bottom: 100px;
}

.work header {
	padding-top: 50vh;
}

.arrow a {
	text-decoration: none;
	font-size: 24px;
}

.arrow a:hover {
	opacity: 0.4;
}

h1 {
	font-weight: 700;
	font-size: 160px;
	line-height: 160px;
	padding: 20px 0 20px 0;
	margin: 0;
}
.work h1 {
	font-size: 140px;
}

h2 {
	font-weight: 300;
	font-size: 40px;
	line-height: 50px;
	padding: 0 0 10px 0;
	margin: 0;
}

h3 {
	font-weight: bold;
	font-size: 42px;
	line-height: 52px;
	padding: 20px 0 20px 0;
	margin: 0;
}

h4,
h5 {
	font-weight: bold;
	font-size: 10px;
	line-height: 18px;
	padding: 20px 0 0 0;
	margin: 0;
	text-transform: uppercase;
}

h4 {
	opacity: 0.2;
}

section {
	max-width: 620px;
}

section ul,
footer ul {
	list-style: none;
	padding: 0;
	margin: 0 0 20px 0;
}

.images {
	max-width: 1680px;
	padding: 25vh 0 140px 0;
}

.row {
	display: flex;
}

.column-100 {
	flex: 100%;
	padding-right: 15px;
	padding-bottom: 45px;
}
.home .column-100 {
	padding-bottom: 0px;
}

.column-60 {
	flex: 60%;
	max-width: 1040px;
	padding-right: 15px;
}

.column-40 {
	flex: 40%;
	max-width: 615px;
	padding-right: 15px;
}

p.employable {
	font-weight: 300;
	font-size: 18px;
	line-height: 26px;
	padding: 20px 0 20px 0;
	max-width: 1280px;
}

p.caption {
	padding: 5px 0 0 0;
	line-height: 1.4;
}

.column-100 p.caption {
	padding-bottom: 20px;
}
.home .column-100 p.caption {
	padding-bottom: 0px;
}

p.intro {
	font-size: 28px;
	line-height: 36px;
	padding-bottom: 10px;
}

blockquote {
	border-left: 1px solid rgb(221, 221, 221, 0.2);
	padding: 0 20px 0 20px;
	margin: 0;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #1a1a1a;
}

hr.large {
	margin: 50px 0 30px 0;
	border-top: 1px solid #1a1a1a;
	opacity: 0.8;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

.desktop {
	display: none;
}

footer {
	padding: 60px 0 0 0;
}

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */

@media only screen and (max-width: 1680px) {
	.home .container {
		background-image: url("/filing/images/wellington-map-small.jpg");
	}
	header {
		padding-top: 40vh;
	}
	.home header {
		padding-bottom: 40px;
	}
	.work header {
		padding-top: 55vh;
	}
	.images {
		max-width: 1540px;
	}
	.column-60 {
		flex: 65%;
	}
	.column-40 {
		flex: 35%;
	}
}
/* ... */

